.provarCaches/00D410000011HE0EAM/objects/rstkf__faato__c.object
<CustomObject>
    <description>faato__c</description>
    <fields>
        <fullName>rstkf__faaato_acqcracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>faaato_acqcracct__c</description>
        <label>Acquisition Credit Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Fixed Asset Add Transaction Objects</relationshipLabel>
        <relationshipName>faatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_acctdate__c</fullName>
        <description>faato_acctdate__c</description>
        <inlineHelpText>Accounting Date</inlineHelpText>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_adjamount__c</fullName>
        <description>faato_adjamount__c</description>
        <label>Adjustment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_deprmonths__c</fullName>
        <description>faato_deprmonths__c</description>
        <label>Months Depreciated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_errorstack__c</fullName>
        <description>faato_errorstack</description>
        <label>Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>faato_glcmp__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Fixed Asset Add Transaction Objects</relationshipLabel>
        <relationshipName>faatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_glfa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>faato_glfa__c</description>
        <label>Fixed Asset</label>
        <referenceTo>rstkf__glfa__c</referenceTo>
        <relationshipLabel>Fixed Asset Add Transaction Objects</relationshipLabel>
        <relationshipName>faatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_message__c</fullName>
        <description>faato_message__c</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_noacqgltxn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>faato_noacqgltxn__c</description>
        <label>Suppress GL Txn on Acquisition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_process__c</fullName>
        <description>faato_process__c</description>
        <label>Processing Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>Validation Failure</fullName>
                </value>
                <value>
                    <fullName>Processing Failure</fullName>
                </value>
                <value>
                    <fullName>Processing Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__faato_reference__c</fullName>
        <description>faato_reference__c</description>
        <label>Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_retireamt__c</fullName>
        <label>Retirement Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_retiredisp__c</fullName>
        <description>faato_retiredisp__c</description>
        <label>Retirement Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Inventoried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__faato_txndate__c</fullName>
        <description>faato_txndate__c</description>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__faato_txntype__c</fullName>
        <description>faato_txntype__c</description>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Addition</fullName>
                </value>
                <value>
                    <fullName>Adjustment-Up</fullName>
                </value>
                <value>
                    <fullName>Adjustment-Down</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>Partial Disposal</fullName>
                </value>
                <value>
                    <fullName>Regenerate Depreciation Forecast</fullName>
                </value>
                <value>
                    <fullName>Take-On Depreciation</fullName>
                </value>
                <value>
                    <fullName>Take On Summary Depreciation</fullName>
                </value>
                <value>
                    <fullName>Revaluation</fullName>
                    <isActive>false</isActive>
                    <label>Revaluation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__faato_txndate__c) &amp; &apos;(&apos; &amp; TEXT(rstkf__faato_txntype__c) &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <label>Fixed Asset Add Transaction Object</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__faato_glcmp__c</columns>
        <columns>rstkf__faato_reference__c</columns>
        <columns>rstkf__formula_name__c</columns>
        <columns>rstkf__faato_txntype__c</columns>
        <columns>rstkf__faato_glfa__c</columns>
        <columns>rstkf__faato_txndate__c</columns>
        <columns>rstkf__faato_adjamount__c</columns>
        <columns>rstkf__faato_process__c</columns>
        <columns>rstkf__faato_retiredisp__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Asset Add Transaction Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>